chore: Update index.html and package files for project enhancements
- Updated the title and meta tags in index.html to reflect the new project branding and improved descriptions.
- Added Open Graph and Twitter meta tags for better social media integration.
- Introduced a new script command in package.json for generating images.
- Added sharp library as a dependency in package.json and package-lock.json for image processing capabilities.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/climata-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ClimaTracker - Weather Dashboard</title>
-    <meta name="description" content="A beautiful weather dashboard with real-time data and forecasts" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="ClimaTracker - Weather Dashboard" />
-    <meta property="og:description" content="A beautiful weather dashboard with real-time data and forecasts" />
+    <meta name="description" content="Climata - Modern Weather App - Get real-time weather information for any location" />
+    <meta name="theme-color" content="#000000" />
+    
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://climata.vercel.app/" />
+    <meta property="og:title" content="Climata - Modern Weather App" />
+    <meta property="og:description" content="Get real-time weather information for any location with a sleek, responsive design." />
+    <meta property="og:image" content="/climata-preview.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://climata.vercel.app/" />
+    <meta property="twitter:title" content="Climata - Modern Weather App" />
+    <meta property="twitter:description" content="Get real-time weather information for any location with a sleek, responsive design." />
+    <meta property="twitter:image" content="/climata-preview.png" />
+
+    <title>Climata - Modern Weather App</title>
   </head>
-
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
